--- a/css/ajustes.css
+++ b/css/ajustes.css
@@ -1,3 +1,19 @@
+
+html, body {
+height: 100%;
+margin: 0;
+padding: 0;
+}
+
+#icon-user{ /*da estilo a la imagen del modal registrate*/
+  width: 40%;
+  margin-left: 180px;
+}
+
+#log-in {
+  background-color: #F7B617;
+}
+
 .fondo-taxi {
   background: url(../assets/images/taxi.jpg);
   height: 120vh;
@@ -103,16 +119,29 @@
   color: white;
 }
 
-#map {
-  height: 100%;
-}
-      /* Optional: Makes the sample page fill the window. */
-
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-      }
 .modal-title {
   color: black;
+}
+
+.aqua {
+  background-color: aqua;
+}
+
+.log-in { /*da estilo al div que contiene el form del primer modal*/
+  background-color: white;
+  height: 30vh;
+}
+
+.modal-1 {
+  height: 40vh;
+}
+
+.margin-input {
+  margin: 30px 0px 30px 0px;
+}
+
+.style-input {
+    background-color: inherit;
+    border: 1px solid white;
+    border-radius: 15px;
 }
