--- a/css/ajustes.css
+++ b/css/ajustes.css
@@ -14,6 +14,10 @@ padding: 0;
   background-color: #F7B617;
 }
 
+#map {
+  height: 60vh;
+}
+
 .fondo-taxi {
   background: url(../assets/images/taxi.jpg);
   height: 120vh;
@@ -132,16 +136,42 @@ padding: 0;
   height: 30vh;
 }
 
-.modal-1 {
+.modal-1 { /*Da altura al modal-1*/
   height: 40vh;
 }
 
-.margin-input {
+.margin-input {/*Da el margen a input*/
   margin: 30px 0px 30px 0px;
 }
 
-.style-input {
+.style-input { /*Da estilo a los inputs de la sección 4*/
     background-color: inherit;
     border: 1px solid white;
-    border-radius: 15px;
+    border-radius: 5px;
+    width: 60%;
+    color: white;
+}
+
+.border-map { /*Da estilo al borde que rodea el mapa*/
+  border: 2px solid white;
+  margin-top: 5vh;
+}
+
+#button-ruta { /*centra el boton de trazar ruta*/
+  margin-left: 15vh;
+}
+.footer-icons { /*coloca hasta abajo a los iconos del footer*/
+  margin-top: 50vh;
+}
+
+.footer-icons-2 { /*da margin top a los iconos de playstore*/
+  margin-top: 30vh;
+}
+
+.footer-copyrigth { /* da margin top al copyrigth*/
+  margin-top: 5vh;
+}
+
+.hamburguer {
+  height: 30vh;
 }
